# asrinput

./: .gitignore  Makefile  README.md  asrinput.spec  build.bat  build.py  main.py  pyproject.toml
asrinput/: __init__.py  app.py  audio.py  recognizer.py  settings_window.py  text_input.py
