[project]
name = "asrinput"
version = "0.1.0"
description = "Real-time speech recognition tool with GUI for Korean/English"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.0",
    "customtkinter>=5.2.0",
    "pynput>=1.7.0",
    "sounddevice>=0.4.0",
    "numpy>=1.26.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
asrinput = "asrinput.app:run_app"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-pyperclip",
    "types-pynput",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

